--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
             <h1>ポートフォリオ</h1>
             <p class="lead">世界の皆さん、こんにちは。</p>
             <h2 id="works">Works</h2>
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>作品名</h3>
+                <p>sakuhingaiyou</p>
+                <div class="col-sm-6">
+                <img class="img-responsive"src="images/img.png" alt="作品名">
+
+
+
+              </div>
+
+            </div>
             <p>説明文：あいうえおあいうえおあいうえお</p>
             <hr>
             <h2 id="skills">Skills</h2>
